# EmbedCV

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
inc/: config.h  err_code.h  logger.h  model.h  mpmc_queue.h  object_factory.hpp  processor.hpp  solution.h  whale_any.h
inc/manager/: config_manager.h  model_manager.h  process_manager.h  queue_manager.h  solution_manager.h
inc/processor/: processor_factory.hpp
inc/processor/bussiness/: digital_fence_processor.hpp
inc/processor/cv/: tbd_processor.hpp
inc/processor/display/: rtsp_output_processor.hpp
inc/processor/input/: rtsp_input_processor.hpp
src/: logger.cpp  solution.cpp
src/manager/: config_manager.cpp  model_manager.cpp  process_manager.cpp  queue_manager.cpp  solution_manager.cpp
